--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     
                     
               <section class= "bottom">  
-                <div class= "Services">
+                <div class= "services">
                     <h2>Services</h2>
                         <p>Services Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis. </p>
                 </div>
